dowel/tests/ui/on_enum.stderr
error: Wire can only be derived for structs
 --> tests/ui/on_enum.rs:5:1
  |
5 | enum Bad {
  | ^^^^
